--- a/MetaVR/Packages/manifest.json
+++ b/MetaVR/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.meta.xr.sdk.all": "69.0.0",
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.editorcoroutines": "1.0.0",
     "com.unity.feature.development": "1.0.1",
@@ -9,6 +10,8 @@
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.4",
+    "com.unity.xr.management": "4.5.0",
+    "com.unity.xr.oculus": "4.3.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
